Books and reader

--- a/nginx/nginx-site.conf
+++ b/nginx/nginx-site.conf
@@ -19,8 +19,15 @@ server {
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
+    location /profile/update/ {
+        fastcgi_pass unix:/var/run/php/php7.3-fpm.sock;
+        fastcgi_param SCRIPT_FILENAME $document_root/update_profile.php;
+        include fastcgi_params;
+    }
+
+
     location /media/ {
-        try_files $uri =404; # Обработка запросов к ресурсам в папке media
+        try_files $uri =404;
     }
 
     location ~ \.php$ {
